Fix team name aligning. Add user list

--- a/src/client/features/Details/Details.styles.scss
+++ b/src/client/features/Details/Details.styles.scss
@@ -22,6 +22,7 @@
   color: rgba(255, 255, 255, 0.75);
   font-size: 24px;
   font-weight: 600;
+  text-align: center;
 }
 
 .logo {
@@ -40,4 +41,28 @@
   font-size: 28px;
   font-weight: 600;
   text-align: center;
+}
+
+.listItem {
+  display: flex;
+  align-items: center;
+
+  padding: 0 16px;
+  height: 48px;
+  max-height: 48px;
+  min-height: 48px;
+
+  background-color: #fff;
+  color: rgba(0, 0, 0, 0.87);
+  font-size: 16px;
+
+  &:nth-child(2n -1) {
+    background-color: #eee;
+  }
+}
+
+.listItemLogo {
+  margin-right: 20px;
+  width: 28px;
+  height: 28px;
 }
